--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,9 @@
   "ACTION.LOOK_UP.VIE_CHI": "Vietnamese -> Chinese",
   "CONFIRM_DELETE": "Are you sure delete?",
   "CONFIRM_DISCARD": "Are you sure discard?",
+  "CONFIRM_LOGOUT": "Are you sure logout",
+  "CONFIRM": "Yes",
+  "CANCEL": "Cancel",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Update successfully",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
