--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -4,7 +4,7 @@
   "EN": "English",
   "ZH": "汉文",
   "SUPER_CHINESE": "Super Chinese",
-  "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
+  "SLOGAN": "Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời.",
   "HOME": "Trang chủ",
   "DICTIONARY": "Từ điển Hán Việt",
   "STAR": "tính năng nổi bật",
@@ -17,6 +17,9 @@
   "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán tự",
   "CONFIRM_DELETE": "Đồng ý xoá?",
   "CONFIRM_DISCARD": "Đồng ý huỷ?",
+  "CONFIRM_LOGOUT": "Nhấn xác nhận để đăng xuất.",
+  "CONFIRM": "Xác nhận",
+  "CANCEL": "Huỷ",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
