--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -17,6 +17,9 @@
   "ACTION.LOOK_UP.VIE_CHI": "越语 -> 汉字",
   "CONFIRM_DELETE": "Are you sure delete?",
   "CONFIRM_DISCARD": "Are you sure discard?",
+  "CONFIRM_LOGOUT": "Are you sure logout",
+  "CONFIRM": "Yes",
+  "CANCEL": "Cancel",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
