--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -23,6 +23,8 @@
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
+  "NOTIFICATION.UPDATE_DECLINE": "Bạn không có quyền để chỉnh sửa!",
+  "NOTIFICATION.DELETE_DECLINE": "Bạn không có quyền để xoá!",
   "NO_RESULT": "Không có dữ liệu",
   "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
