--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -23,6 +23,8 @@
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
+  "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
+  "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
   "NO_RESULT": "没有数据",
   "DICTIONARY.DISPLAY": "汉字",
   "DICTIONARY.PINYIN": "拼音",
