--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -15,6 +15,7 @@
   "ACTION.UPDATE": "更新",
   "ACTION.LOOK_UP.CHI_VIE": "汉字 -> 越语",
   "ACTION.LOOK_UP.VIE_CHI": "越语 -> 汉字",
+  "ACTION.SEARCH": "Look up",
   "CONFIRM_DELETE": "Are you sure delete?",
   "CONFIRM_DISCARD": "Are you sure discard?",
   "CONFIRM_LOGOUT": "Are you sure logout",
