--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -20,6 +20,12 @@
   "CONFIRM_DISCARD": "Đồng ý huỷ?",
   "CONFIRM_LOGOUT": "Nhấn xác nhận để đăng xuất.",
   "CONFIRM": "Xác nhận",
+  "VIEW_ALL": "Tất cả",
+  "LATEST": "8 từ mới nhất",
+  "SEARCH_RESULTS": "Kết quả tìm kiếm",
+  "MODAL.CONFIRM_VIEW_ALL": "Bạn có muốn xem tất cả?",
+  "MODAL.CONFIRM_VIEW_ALL.CONTENT": "Xem tất cả có thể mất 4 đến 5 giây để load dữ liệu.",
+  "CONFIRM_VIEW_ALL": "Vẫn xem tất cả",
   "CANCEL": "Huỷ",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
@@ -27,6 +33,7 @@
   "NOTIFICATION.UPDATE_DECLINE": "Bạn không có quyền để chỉnh sửa!",
   "NOTIFICATION.DELETE_DECLINE": "Bạn không có quyền để xoá!",
   "NO_RESULT": "Không có dữ liệu",
+  "AFTER_NO_RESULT": "Bạn có thể chọn lựa chọn hoặc tìm kiếm từ khoá khác.",
   "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
   "DICTIONARY.CHINA_VIETNAM_WORD": "Hán Việt",
@@ -60,196 +67,5 @@
   "FOOTER": "Được thiết kế và phát triển bởi Toàn",
   "INTRO1": "Chào mọi người, mình là Toàn. Mình yêu thích và bắt đầu học tiếng Trung từ năm 2021. Lý do là vì mình yêu thích văn hóa Trung Quốc và vì mình tin rằng trong tương lai Trung Quốc sẽ dẫn đầu trong rất nhiều lĩnh vực khoa học kỹ thuật, công nghệ. Học tiếng Trung giúp mình có thêm nhiều cơ hội để tìm một công việc tốt hơn, thu nhập cao hơn trong tương lai.",
   "INTRO3": "Học tiếng Trung là bước ngoặt cuộc đời của mình. Không biết từ khi nào mà tiếng Trung trở thành một phần không thể thiếu trong cuộc sống của mình. Tiếng Trung giúp mình hiểu được thứ gọi là \"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời.\"",
-  "INTRO4": "Đây là sự kết hợp giữa điều mình có thể làm và điều mình thích. Hy vọng trong tương lai mình có thể mở rộng dự án này hơn và cập nhật thêm nhiều tính năng khác vào nữa. Cảm ơn mọi người đã đọc những dòng này và đồng hành cùng với mình.",
-  "WORD.DEFINE.SINGULAR_YOU": "bạn",
-  "WORD.DEFINE.GOOD": "tốt, đẹp",
-  "WORD.DEFINE.POLITE_YOU": "ngài, ông, bà (cách gọi kính trọng)",
-  "WORD.DEFINE.PLURAL_YOU": "các bạn",
-  "WORD.DEFINE.TO_BE_SRY": "xin lũi",
-  "WORD.DEFINE.IT_NO_MATTER": "khum sao đâu",
-  "WORD.DEFINE.TO_TKS": "kảm ưn",
-  "WORD.DEFINE.NO": "khum",
-  "WORD.DEFINE.UR_WELCOME": "khum kó j",
-  "WORD.DEFINE.BYE": "tạm biệt",
-  "WORD.DEFINE.TO_CALL": "kêu, gọi",
-  "WORD.DEFINE.WHAT": "kái j",
-  "WORD.DEFINE.NAME": "tên",
-  "WORD.DEFINE.I": "tôi",
-  "WORD.DEFINE.TO_BE": "thì, là",
-  "WORD.DEFINE.TEACHER": "giáo viên",
-  "WORD.DEFINE.MA": "từ để hỏi",
-  "WORD.DEFINE.STUDENT": "Học sinh",
-  "WORD.DEFINE.HUMAN": "người",
-  "WORD.DEFINE.CHINA": "Trung Quốc",
-  "WORD.DEFINE.USA": "Mỹ",
-  "WORD.DEFINE.SHE": "cô ấy",
-  "WORD.DEFINE.HE": "anh ấy",
-  "WORD.DEFINE.WHO": "ai",
-  "WORD.DEFINE.OF": "(quan hệ sở hữu) của",
-  "WORD.DEFINE.CHINESE_LANGUAGE": "tiếng Trung",
-  "WORD.DEFINE.WHICH": "nào",
-  "WORD.DEFINE.COUNTRY": "nước",
-  "WORD.DEFINE.NE": "đâu, thế, nhỉ, vậy,...",
-  "WORD.DEFINE.CLASSMATE": "bạn học",
-  "WORD.DEFINE.FRIEND": "bạn bè",
-  "WORD.DEFINE.FAMILY": "nhà",
-  "WORD.DEFINE.TO_HAVE": "có",
-  "WORD.DEFINE.MOUTH": "miệng",
-  "WORD.DEFINE.DAUGHTER": "con gái",
-  "WORD.DEFINE.HOW_MANY1": "mấy",
-  "WORD.DEFINE.AGE": "tuổi",
-  "WORD.DEFINE.LE": "trợ từ biểu thị sự thay đổi",
-  "WORD.DEFINE.THIS_YEAR": "năm nay",
-  "WORD.DEFINE.EXTENT": "nhiều, (đại từ nghi vấn) bao nhiêu",
-  "WORD.DEFINE.BIG": "to, bao nhiêu tuổi",
-  "WORD.DEFINE.KNOW": "biết",
-  "WORD.DEFINE.TO_SAY": "nói",
-  "WORD.DEFINE.MOTHER": "mẹ",
-  "WORD.DEFINE.DISH": "đồ ăn",
-  "WORD.DEFINE.VERY": "rất",
-  "WORD.DEFINE.DELICIOUS": "ngon",
-  "WORD.DEFINE.TO_MAKE": "làm",
-  "WORD.DEFINE.TO_WRITE": "viết",
-  "WORD.DEFINE.CHINESE_CHARACTER": "chữ Hán",
-  "WORD.DEFINE.CHARACTER": "chữ",
-  "WORD.DEFINE.HOW": "như thế nào",
-  "WORD.DEFINE.TO_READ": "đọc",
-  "WORD.DEFINE.PLZ": "vui lòng",
-  "WORD.DEFINE.TO_ASK": "hỏi",
-  "WORD.DEFINE.TODAY": "hôm nay",
-  "WORD.DEFINE.DATE_OF_MONTH": "ngày trong tháng",
-  "WORD.DEFINE.MONTH": "tháng",
-  "WORD.DEFINE.WEEK": "tuần, thứ",
-  "WORD.DEFINE.YESTERDAY": "hôm qua",
-  "WORD.DEFINE.TOMORROW": "ngày mai",
-  "WORD.DEFINE.TO_GO": "đi",
-  "WORD.DEFINE.SCHOOL": "trường học",
-  "WORD.DEFINE.TO_LOOK": "xem, đọc",
-  "WORD.DEFINE.BOOK": "sách",
-  "WORD.DEFINE.TO_WANT": "muốn",
-  "WORD.DEFINE.TO_DRINK": "uống",
-  "WORD.DEFINE.TEA": "trà",
-  "WORD.DEFINE.TO_EAT": "ăn",
-  "WORD.DEFINE.COOKED_RICE": "cơm",
-  "WORD.DEFINE.MORNING": "buổi sáng",
-  "WORD.DEFINE.MIDDAY": "buổi trưa",
-  "WORD.DEFINE.AFTERNOON": "buổi chiều",
-  "WORD.DEFINE.SHOP": "cửa hàng",
-  "WORD.DEFINE.TO_BUY": "mua",
-  "WORD.DEFINE.GE": "(lượng từ) cái,...",
-  "WORD.DEFINE.CUP": "ly",
-  "WORD.DEFINE.THIS": "đây, này",
-  "WORD.DEFINE.HOW_MANY2": "bao nhiêu",
-  "WORD.DEFINE.MONEY": "tiền",
-  "WORD.DEFINE.UNIT_OF_MONEY": "đơn vị tiền tệ",
-  "WORD.DEFINE.THAT": "đó, kia",
-  "WORD.DEFINE.SMALL": "nhỏ",
-  "WORD.DEFINE.CAT": "con mèo",
-  "WORD.DEFINE.TO_BE_IN": "ở",
-  "WORD.DEFINE.THERE": "ở đó",
-  "WORD.DEFINE.DOG": "con chó",
-  "WORD.DEFINE.CHAIR": "cái ghế",
-  "WORD.DEFINE.UNDER": "ở dưới",
-  "WORD.DEFINE.ON": "ở trên",
-  "WORD.DEFINE.IN": "ở trong",
-  "WORD.DEFINE.WHERE": "ở đâu",
-  "WORD.DEFINE.TO_WORK": "làm việc/công việc",
-  "WORD.DEFINE.SON": "con trai",
-  "WORD.DEFINE.HOSPITAL": "bệnh viện",
-  "WORD.DEFINE.DOCTOR": "bác sỹ",
-  "WORD.DEFINE.FATHER": "cha",
-  "WORD.DEFINE.DESK": "cái bàn",
-  "WORD.DEFINE.UP": "phía trên",
-  "WORD.DEFINE.COMPUTER": "máy tính",
-  "WORD.DEFINE.AND": "và",
-  "WORD.DEFINE.BEN": "cuốn",
-  "WORD.DEFINE.INNER": "phía trong",
-  "WORD.DEFINE.FRONT": "phía trước",
-  "WORD.DEFINE.BACK": "phía sau",
-  "WORD.DEFINE.HERE": "ở đây",
-  "WORD.DEFINE.THERE_ARE_NOT": "không có",
-  "WORD.DEFINE.CAN": "có thể",
-  "WORD.DEFINE.TO_SIT": "ngồi",
-  "WORD.DEFINE.NOW": "hiện tại",
-  "WORD.DEFINE.OCLOCK": "giờ",
-  "WORD.DEFINE.MINUTE": "phút",
-  "WORD.DEFINE.TO_EAT_A_MEAL": "ăn cơm",
-  "WORD.DEFINE.TIME": "thời gian",
-  "WORD.DEFINE.GO_BACK": "trở về",
-  "WORD.DEFINE.WE": "chúng ta",
-  "WORD.DEFINE.FILM": "phim",
-  "WORD.DEFINE.TO_LIVE": "sống",
-  "WORD.DEFINE.BEFORE": "phía trước",
-  "WORD.DEFINE.WEATHER": "thời tiết",
-  "WORD.DEFINE.TOO": "quá",
-  "WORD.DEFINE.HOT": "nóng",
-  "WORD.DEFINE.COLD": "lạnh",
-  "WORD.DEFINE.TO_RAIN": "mưa",
-  "WORD.DEFINE.TO_FALL": "rơi",
-  "WORD.DEFINE.RAIN": "cơn mưa",
-  "WORD.DEFINE.MISS": "tiểu thư",
-  "WORD.DEFINE.TO_COME": "đến",
-  "WORD.DEFINE.BODY": "thân thể, sức khoẻ",
-  "WORD.DEFINE.TO_LOVE": "yêu, thích",
-  "WORD.DEFINE.SOME": "vài",
-  "WORD.DEFINE.FRUIT": "trái cây",
-  "WORD.DEFINE.WATER": "nước",
-  "WORD.DEFINE.HELLO": "ê",
-  "WORD.DEFINE.ALSO": "cũng",
-  "WORD.DEFINE.TO_STUDY": "học",
-  "WORD.DEFINE.TO_SLEEP": "ngủ",
-  "WORD.DEFINE.TELEVISION": "truyền hình",
-  "WORD.DEFINE.TO_LIKE": "thích",
-  "WORD.DEFINE.TO": "(giới từ) cho",
-  "WORD.DEFINE.TO_MAKE_A_PHONE_CALL": "gọi điện thoại",
-  "WORD.DEFINE.BA": "đi/nhé",
-  "WORD.DEFINE.THING": "đồ",
-  "WORD.DEFINE.A_FEW": "một ít",
-  "WORD.DEFINE.APPLE": "táo",
-  "WORD.DEFINE.TO_SEE": "thấy, gặp",
-  "WORD.DEFINE.MR": "tiên sinh",
-  "WORD.DEFINE.TO_DRIVE": "lái",
-  "WORD.DEFINE.CAR": "xe",
-  "WORD.DEFINE.TO_COME_BACK": "quay về",
-  "WORD.DEFINE.HOUR": "giờ",
-  "WORD.DEFINE.AFTER": "sau",
-  "WORD.DEFINE.CLOTHES": "quần áo",
-  "WORD.DEFINE.BEAUTIFUL": "xinh, đẹp",
-  "WORD.DEFINE.A": "từ cảm thán",
-  "WORD.DEFINE.QUITE_A_FEW": "không ít",
-  "WORD.DEFINE.THESE": "những cái này",
-  "WORD.DEFINE.BOTH": "đều",
-  "WORD.DEFINE.TO_MEET": "gặp",
-  "WORD.DEFINE.YEAR": "năm",
-  "WORD.DEFINE.COLLEGE": "đại học",
-  "WORD.DEFINE.HOTEL": "khách sạn, nhà hàng",
-  "WORD.DEFINE.TAXI": "tắc-xi",
-  "WORD.DEFINE.TOGETHER": "cùng nhau",
-  "WORD.DEFINE.GLAD": "vui",
-  "WORD.DEFINE.TO_LISTEN": "nghe",
-  "WORD.DEFINE.AIRPLANE": "máy bay",
-  "WORD.DEFINE.TO_TRAVEL": "du lịch",
-  "WORD.DEFINE.TO_THINK": "nghĩ, cảm thấy",
-  "WORD.DEFINE.MOST": "nhất",
-  "WORD.DEFINE.WHY": "tại sao",
-  "WORD.DEFINE.SPORT": "thể thao/ vận động",
-  "WORD.DEFINE.TO_PLAY_FOOTBALL": "đá banh",
-  "WORD.DEFINE.TO_WANT_TO": "muốn/ phải",
-  "WORD.DEFINE.NEW": "mới",
-  "WORD.DEFINE.IT": "nó",
-  "WORD.DEFINE.EYE": "mắt",
-  "WORD.DEFINE.NAME_OF_CAT": "Hoa hoa (tên của 1 con mèo)",
-  "WORD.DEFINE.TO_FALL_ILL": "bệnh",
-  "WORD.DEFINE.EVERY": "mỗi",
-  "WORD.DEFINE.MORNING2": "sáng sớm",
-  "WORD.DEFINE.TO_JOG": "đi bộ",
-  "WORD.DEFINE.TO_GET_UP": "thức dậy",
-  "WORD.DEFINE.MEDICINE": "thuốc",
-  "WORD.DEFINE.TO_LEAVE_HOSPITAL": "xuất viện",
-  "WORD.DEFINE.TO_COME_OUT": "ra ngoài",
-  "WORD.DEFINE.TALL": "cao",
-  "WORD.DEFINE.METER": "mét",
-  "WORD.DEFINE.TO_KNOW": "biết",
-  "WORD.DEFINE.TO_TAKE_A_REST": "nghỉ ngơi",
-  "WORD.DEFINE.BUSY": "bận"
+  "INTRO4": "Đây là sự kết hợp giữa điều mình có thể làm và điều mình thích. Hy vọng trong tương lai mình có thể mở rộng dự án này hơn và cập nhật thêm nhiều tính năng khác vào nữa. Cảm ơn mọi người đã đọc những dòng này và đồng hành cùng với mình."
 }
