--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -20,6 +20,12 @@
   "CONFIRM_DISCARD": "Are you sure discard?",
   "CONFIRM_LOGOUT": "Are you sure logout",
   "CONFIRM": "Yes",
+  "VIEW_ALL": "View all",
+  "LATEST": "8 latest words",
+  "SEARCH_RESULTS": "Search results",
+  "MODAL.CONFIRM_VIEW_ALL": "Do you want to view all?",
+  "MODAL.CONFIRM_VIEW_ALL.CONTENT": "View all could take 4 - 5 seconds.",
+  "CONFIRM_VIEW_ALL": "View all",
   "CANCEL": "Cancel",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
@@ -27,6 +33,7 @@
   "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
   "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
   "NO_RESULT": "没有数据",
+  "AFTER_NO_RESULT": "You could select another option or search another word.",
   "DICTIONARY.DISPLAY": "汉字",
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.CHINA_VIETNAM_WORD": "汉越字",
@@ -60,196 +67,5 @@
   "FOOTER": "Designed and developed by Toàn",
   "INTRO1": "Hello everyone, my name is Toàn. I am a Vietnamese Software Developer. I am a student at Saigon University of Information Technology since 2018.",
   "INTRO3": "I have been interested in Chinese since I was a third year student because I love Chinese culture and I believe that in the future China will lead in many fields of science, technology. Learning Chinese helps me have more job opportunities with better income in the future. And help me to be able to orient my children later, hihi.",
-  "INTRO4": "This is a combination of what I can do and what I like. Hopefully in the future I can scale up this project more and update more features. Thank you for reading these lines and accompanying me.",
-  "WORD.DEFINE.SINGULAR_YOU": "(singular) you",
-  "WORD.DEFINE.GOOD": "good, fine",
-  "WORD.DEFINE.POLITE_YOU": "(polite) you",
-  "WORD.DEFINE.PLURAL_YOU": "(plural) you",
-  "WORD.DEFINE.TO_BE_SRY": "to be sorry",
-  "WORD.DEFINE.IT_NO_MATTER": "that's OK, it doesn't matter",
-  "WORD.DEFINE.TO_TKS": "to thank",
-  "WORD.DEFINE.NO": "no, not",
-  "WORD.DEFINE.UR_WELCOME": "you're welcome, don't mention it",
-  "WORD.DEFINE.BYE": "to see you around",
-  "WORD.DEFINE.TO_CALL": "to call, to be called",
-  "WORD.DEFINE.WHAT": "what",
-  "WORD.DEFINE.NAME": "name",
-  "WORD.DEFINE.I": "I, me",
-  "WORD.DEFINE.TO_BE": "to be",
-  "WORD.DEFINE.TEACHER": "teacher",
-  "WORD.DEFINE.MA": "used at the end of the question",
-  "WORD.DEFINE.STUDENT": "student",
-  "WORD.DEFINE.HUMAN": "human, person",
-  "WORD.DEFINE.CHINA": "China",
-  "WORD.DEFINE.USA": "the United State of America",
-  "WORD.DEFINE.SHE": "she, her",
-  "WORD.DEFINE.HE": "he, him",
-  "WORD.DEFINE.WHO": "who, whom",
-  "WORD.DEFINE.OF": "used after an attribute",
-  "WORD.DEFINE.CHINESE_LANGUAGE": "Chinese (language)",
-  "WORD.DEFINE.WHICH": "which",
-  "WORD.DEFINE.COUNTRY": "country, nation",
-  "WORD.DEFINE.NE": "used at the end of the question",
-  "WORD.DEFINE.CLASSMATE": "classmate",
-  "WORD.DEFINE.FRIEND": "friend",
-  "WORD.DEFINE.FAMILY": "family",
-  "WORD.DEFINE.TO_HAVE": "to have, there be",
-  "WORD.DEFINE.MOUTH": "mouth",
-  "WORD.DEFINE.DAUGHTER": "daughter",
-  "WORD.DEFINE.HOW_MANY1": "how many",
-  "WORD.DEFINE.AGE": "year (of age)",
-  "WORD.DEFINE.LE": "used to indicate a change",
-  "WORD.DEFINE.THIS_YEAR": "this year",
-  "WORD.DEFINE.EXTENT": "indicating degree or extent",
-  "WORD.DEFINE.BIG": "(of age) old",
-  "WORD.DEFINE.KNOW": "can, to be able to",
-  "WORD.DEFINE.TO_SAY": "to speak, to say",
-  "WORD.DEFINE.MOTHER": "mother",
-  "WORD.DEFINE.DISH": "dish, cuisine",
-  "WORD.DEFINE.VERY": "very, quite",
-  "WORD.DEFINE.DELICIOUS": "delicious, tasty",
-  "WORD.DEFINE.TO_MAKE": "to make, to produce",
-  "WORD.DEFINE.TO_WRITE": "to write",
-  "WORD.DEFINE.CHINESE_CHARACTER": "Chinese character",
-  "WORD.DEFINE.CHARACTER": "character",
-  "WORD.DEFINE.HOW": "how",
-  "WORD.DEFINE.TO_READ": "to read",
-  "WORD.DEFINE.PLZ": "(polite) please",
-  "WORD.DEFINE.TO_ASK": "to ask, to inquire",
-  "WORD.DEFINE.TODAY": "today",
-  "WORD.DEFINE.DATE_OF_MONTH": "(for day of month) number",
-  "WORD.DEFINE.MONTH": "month",
-  "WORD.DEFINE.WEEK": "week",
-  "WORD.DEFINE.YESTERDAY": "yesterday",
-  "WORD.DEFINE.TOMORROW": "tomorrow",
-  "WORD.DEFINE.TO_GO": "to go",
-  "WORD.DEFINE.SCHOOL": "school",
-  "WORD.DEFINE.TO_LOOK": "to look at, to watch, to readf",
-  "WORD.DEFINE.BOOK": "book",
-  "WORD.DEFINE.TO_WANT": "to want, would like",
-  "WORD.DEFINE.TO_DRINK": "to drink",
-  "WORD.DEFINE.TEA": "tea",
-  "WORD.DEFINE.TO_EAT": "to eat",
-  "WORD.DEFINE.COOKED_RICE": "cooked rice",
-  "WORD.DEFINE.MORNING": "morning",
-  "WORD.DEFINE.MIDDAY": "midday",
-  "WORD.DEFINE.AFTERNOON": "afternoon",
-  "WORD.DEFINE.SHOP": "shop, store",
-  "WORD.DEFINE.TO_BUY": "to buy, to purchase",
-  "WORD.DEFINE.GE": "a general measure word",
-  "WORD.DEFINE.CUP": "cup, glass",
-  "WORD.DEFINE.THIS": "this",
-  "WORD.DEFINE.HOW_MANY2": "how many, how much",
-  "WORD.DEFINE.MONEY": "money",
-  "WORD.DEFINE.UNIT_OF_MONEY": "a unit of money",
-  "WORD.DEFINE.THAT": "that",
-  "WORD.DEFINE.SMALL": "small, little",
-  "WORD.DEFINE.CAT": "cat",
-  "WORD.DEFINE.TO_BE_IN": "to be in/on/at, in/at/on",
-  "WORD.DEFINE.THERE": "there",
-  "WORD.DEFINE.DOG": "dog",
-  "WORD.DEFINE.CHAIR": "chair",
-  "WORD.DEFINE.UNDER": "under",
-  "WORD.DEFINE.ON": "on",
-  "WORD.DEFINE.IN": "in",
-  "WORD.DEFINE.WHERE": "where",
-  "WORD.DEFINE.TO_WORK": "to work/job",
-  "WORD.DEFINE.SON": "son",
-  "WORD.DEFINE.HOSPITAL": "hospital",
-  "WORD.DEFINE.DOCTOR": "doctor",
-  "WORD.DEFINE.FATHER": "father",
-  "WORD.DEFINE.DESK": "desk, table",
-  "WORD.DEFINE.UP": "up, above",
-  "WORD.DEFINE.COMPUTER": "computer",
-  "WORD.DEFINE.AND": "and",
-  "WORD.DEFINE.BEN": "a measure word for books",
-  "WORD.DEFINE.INNER": "inner, inside, interior",
-  "WORD.DEFINE.FRONT": "front",
-  "WORD.DEFINE.BACK": "back",
-  "WORD.DEFINE.HERE": "here",
-  "WORD.DEFINE.THERE_ARE_NOT": "there are not",
-  "WORD.DEFINE.CAN": "can, maybe",
-  "WORD.DEFINE.TO_SIT": "to sit, to be seat",
-  "WORD.DEFINE.NOW": "now",
-  "WORD.DEFINE.OCLOCK": "o'clock",
-  "WORD.DEFINE.MINUTE": "minute",
-  "WORD.DEFINE.TO_EAT_A_MEAL": "to eat a meal",
-  "WORD.DEFINE.TIME": "time, moment",
-  "WORD.DEFINE.GO_BACK": "to come/go back, to return",
-  "WORD.DEFINE.WE": "we, us",
-  "WORD.DEFINE.FILM": "film, movie",
-  "WORD.DEFINE.TO_LIVE": "to live, to stay",
-  "WORD.DEFINE.BEFORE": "before, earlier than",
-  "WORD.DEFINE.WEATHER": "weather",
-  "WORD.DEFINE.TOO": "too",
-  "WORD.DEFINE.HOT": "hot",
-  "WORD.DEFINE.COLD": "cold",
-  "WORD.DEFINE.TO_RAIN": "to rain",
-  "WORD.DEFINE.TO_FALL": "(of rain, snow, etc) to fall",
-  "WORD.DEFINE.RAIN": "rain",
-  "WORD.DEFINE.MISS": "miss, young lady",
-  "WORD.DEFINE.TO_COME": "to come",
-  "WORD.DEFINE.BODY": "body",
-  "WORD.DEFINE.TO_LOVE": "to love, to liek",
-  "WORD.DEFINE.SOME": "some, a few",
-  "WORD.DEFINE.FRUIT": "fruit",
-  "WORD.DEFINE.WATER": "water",
-  "WORD.DEFINE.HELLO": "hello, whey",
-  "WORD.DEFINE.ALSO": "also, too",
-  "WORD.DEFINE.TO_STUDY": "to study, to learn",
-  "WORD.DEFINE.TO_SLEEP": "to sleep",
-  "WORD.DEFINE.TELEVISION": "television",
-  "WORD.DEFINE.TO_LIKE": "to like, to be fond of",
-  "WORD.DEFINE.TO": "to",
-  "WORD.DEFINE.TO_MAKE_A_PHONE_CALL": "to make a phone call",
-  "WORD.DEFINE.BA": "a suggest indicating",
-  "WORD.DEFINE.THING": "thing, stuff",
-  "WORD.DEFINE.A_FEW": "a few, a little",
-  "WORD.DEFINE.APPLE": "apple",
-  "WORD.DEFINE.TO_SEE": "to see",
-  "WORD.DEFINE.MR": "Mr, sir",
-  "WORD.DEFINE.TO_DRIVE": "to drive",
-  "WORD.DEFINE.CAR": "car, vehicle",
-  "WORD.DEFINE.TO_COME_BACK": "to come back",
-  "WORD.DEFINE.HOUR": "hour",
-  "WORD.DEFINE.AFTER": "after, afterwards, later",
-  "WORD.DEFINE.CLOTHES": "clothes",
-  "WORD.DEFINE.BEAUTIFUL": "beautiful, pretty",
-  "WORD.DEFINE.A": "a sign of confirmation or defense",
-  "WORD.DEFINE.QUITE_A_FEW": "quite a few, many",
-  "WORD.DEFINE.THESE": "there",
-  "WORD.DEFINE.BOTH": "both, all",
-  "WORD.DEFINE.TO_MEET": "to meet, to know",
-  "WORD.DEFINE.YEAR": "year",
-  "WORD.DEFINE.COLLEGE": "college, university",
-  "WORD.DEFINE.HOTEL": "hotel, restaurant",
-  "WORD.DEFINE.TAXI": "taxi, cab",
-  "WORD.DEFINE.TOGETHER": "together",
-  "WORD.DEFINE.GLAD": "grad, happy",
-  "WORD.DEFINE.TO_LISTEN": "to listen",
-  "WORD.DEFINE.AIRPLANE": "airplane",
-  "WORD.DEFINE.TO_TRAVEL": "to travel, to take a trip",
-  "WORD.DEFINE.TO_THINK": "to think, to feel",
-  "WORD.DEFINE.MOST": "most, to the greatest extent",
-  "WORD.DEFINE.WHY": "why",
-  "WORD.DEFINE.SPORT": "n./v. sport, to take physical exercise, to work out",
-  "WORD.DEFINE.TO_PLAY_FOOTBALL": "to play football",
-  "WORD.DEFINE.TO_WANT_TO": "to want to, would like to",
-  "WORD.DEFINE.NEW": "new",
-  "WORD.DEFINE.IT": "it",
-  "WORD.DEFINE.EYE": "eye",
-  "WORD.DEFINE.NAME_OF_CAT": "name of a cat",
-  "WORD.DEFINE.TO_FALL_ILL": "to fall ill, to be sick",
-  "WORD.DEFINE.EVERY": "every, each",
-  "WORD.DEFINE.MORNING2": "morning",
-  "WORD.DEFINE.TO_JOG": "to run, to jog",
-  "WORD.DEFINE.TO_GET_UP": "to get up, to get out of bed",
-  "WORD.DEFINE.MEDICINE": "medicine, drug",
-  "WORD.DEFINE.TO_LEAVE_HOSPITAL": "to leave hospital, to be discharged from hospital",
-  "WORD.DEFINE.TO_COME_OUT": "to come/go out",
-  "WORD.DEFINE.TALL": "tall, high",
-  "WORD.DEFINE.METER": "meter",
-  "WORD.DEFINE.TO_KNOW": "to know",
-  "WORD.DEFINE.TO_TAKE_A_REST": "to have or take a rest",
-  "WORD.DEFINE.BUSY": "busy"
+  "INTRO4": "This is a combination of what I can do and what I like. Hopefully in the future I can scale up this project more and update more features. Thank you for reading these lines and accompanying me."
 }
