--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -33,7 +33,7 @@
   "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
   "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
   "NO_RESULT": "没有数据",
-  "AFTER_NO_RESULT": "You could select another option or search another word.",
+  "AFTER_NO_RESULT": "You could search another word.",
   "DICTIONARY.DISPLAY": "汉字",
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.CHINA_VIETNAM_WORD": "汉越字",
