--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -59,6 +59,7 @@
   "SUPPORT": "Hỗ trợ",
   "LOGOUT": "Đăng xuất",
   "COMING_SOON": "Sắp có...",
+  "NOTI.RELOAD": "Không thể load dữ liệu lúc này. Bạn có thể reload lại trang.",
   "SELECT": "Chọn bài đi nè",
   "INPUT.PLACE_HOLDER": "Vui lòng nhập",
   "SELECT.PLACE_HOLDER": "Vui lòng chọn",
