--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,6 +59,7 @@
   "SETTING": "Setting",
   "LOGOUT": "Logout",
   "COMING_SOON": "Coming soon...",
+  "NOTI.RELOAD": "Cant load data this time. You maybe reload.",
   "SELECT": "Select a file",
   "INPUT.PLACE_HOLDER": "Please input",
   "SELECT.PLACE_HOLDER": "Please select",
