--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -16,7 +16,7 @@
   "ACTION.LOOK_UP.CHI_VIE": "Hán tự -> Việt",
   "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán tự",
   "ACTION.SEARCH": "Tra từ",
-  "CONFIRM_DELETE": "Đồng ý xoá?",
+  "CONFIRM_DELETE": "Đồng ý xoá {{ word }}?",
   "CONFIRM_DISCARD": "Đồng ý huỷ?",
   "CONFIRM_LOGOUT": "Nhấn xác nhận để đăng xuất.",
   "CONFIRM": "Xác nhận",
