impl audio loading

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,6 +54,7 @@
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
   "EXERCISE": "Exercise",
+  "FILE_LOADING": "Waiting for loading audio",
   "NEW": "New features",
   "SUPPORT": "Support",
   "SETTING": "Setting",
