--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -54,6 +54,7 @@
   "VOCABULARY": "Từ vựng",
   "CURRICULUM": "Giáo trình",
   "EXERCISE": "Bài tập",
+  "FILE_LOADING": "Đang tải audio",
   "SETTING": "Thiết lập",
   "NEW": "Tính năng mới",
   "SUPPORT": "Hỗ trợ",
