--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -54,6 +54,7 @@
   "VOCABULARY": "单词",
   "CURRICULUM": "教程",
   "EXERCISE": "锻炼",
+  "FILE_LOADING": "Waiting for loading audio",
   "NEW": "新的功能",
   "SUPPORT": "支持",
   "SETTING": "设置",
