--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,7 +6,7 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời.",
   "HOME": "Trang chủ",
-  "DICTIONARY": "Từ điển Hán Việt",
+  "DICTIONARY": "Từ điển\nHán Việt",
   "STAR": "tính năng nổi bật",
   "TOTALS": "Hiện có {{ totals }} từ",
   "ACTION.CREATE": "Tạo mới",
