--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -28,6 +28,7 @@
   "MODAL.CONFIRM_VIEW_ALL.CONTENT": "View all could take 4 - 5 seconds.",
   "CONFIRM_VIEW_ALL": "View all",
   "CANCEL": "取消",
+  "SHOULD_STAY": "Keep this form open",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
