--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,9 @@
   "ACTION.LOOK_UP.CHI_VIE": "Chinese -> Vietnamese",
   "ACTION.LOOK_UP.VIE_CHI": "Vietnamese -> Chinese",
   "ACTION.SEARCH": "Look up",
+  "ACTION.PLAY": "Play",
+  "ACTION.PAUSE": "Pause",
+  "ACTION.SHARE": "Share",
   "CONFIRM_DELETE": "Are you sure delete?",
   "CONFIRM_DISCARD": "Are you sure discard?",
   "CONFIRM_LOGOUT": "Are you sure logout",
@@ -34,6 +37,7 @@
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
   "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
   "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
+  "NOTIFICATION.COPIED": "Copy successfully",
   "NO_RESULT": "No result",
   "AFTER_NO_RESULT": "You could search another word.",
   "DICTIONARY.DISPLAY": "Word",
