--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -17,6 +17,9 @@
   "ACTION.LOOK_UP.CHI_VIE": "Hán tự -> Việt",
   "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán tự",
   "ACTION.SEARCH": "Tra từ",
+  "ACTION.PLAY": "Phát",
+  "ACTION.PAUSE": "Tạm dừng",
+  "ACTION.SHARE": "Chia sẻ",
   "CONFIRM_DELETE": "Đồng ý xoá {{ word }}?",
   "CONFIRM_DISCARD": "Đồng ý huỷ?",
   "CONFIRM_LOGOUT": "Nhấn xác nhận để đăng xuất.",
@@ -34,6 +37,7 @@
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
   "NOTIFICATION.UPDATE_DECLINE": "Bạn không có quyền để chỉnh sửa!",
   "NOTIFICATION.DELETE_DECLINE": "Bạn không có quyền để xoá!",
+  "NOTIFICATION.COPIED": "Đã sao chép đường dẫn thành công",
   "NO_RESULT": "Không có dữ liệu",
   "AFTER_NO_RESULT": "Bạn có thể tìm kiếm với từ khoá khác.",
   "DICTIONARY.DISPLAY": "Hán tự",
