--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -1,4 +1,4 @@
-{ 
+{
   "WELCOME": "你好， ",
   "CHOOSE_LANGUAGE": "Language/Ngôn ngữ",
   "VI": "Tiếng Việt",
@@ -17,6 +17,9 @@
   "ACTION.LOOK_UP.CHI_VIE": "汉字 -> 越语",
   "ACTION.LOOK_UP.VIE_CHI": "越语 -> 汉字",
   "ACTION.SEARCH": "Look up",
+  "ACTION.PLAY": "Play",
+  "ACTION.PAUSE": "Pause",
+  "ACTION.SHARE": "Share",
   "CONFIRM_DELETE": "Are you sure delete?",
   "CONFIRM_DISCARD": "Are you sure discard?",
   "CONFIRM_LOGOUT": "Are you sure logout",
@@ -34,6 +37,7 @@
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
   "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
   "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
+  "NOTIFICATION.COPIED": "Copy 成功",
   "NO_RESULT": "没有数据",
   "AFTER_NO_RESULT": "You could search another word.",
   "DICTIONARY.DISPLAY": "汉字",
