--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -25,7 +25,7 @@
   "CONFIRM_LOGOUT": "Nhấn xác nhận để đăng xuất.",
   "CONFIRM": "Xác nhận",
   "VIEW_ALL": "Tất cả",
-  "LATEST": "8 từ mới nhất",
+  "LATEST": "Mới nhất",
   "SEARCH_RESULTS": "Kết quả tìm kiếm",
   "MODAL.CONFIRM_VIEW_ALL": "Bạn có muốn xem tất cả?",
   "MODAL.CONFIRM_VIEW_ALL.CONTENT": "Xem tất cả có thể mất 4 đến 5 giây để load dữ liệu.",
