--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
   "CONFIRM_LOGOUT": "Are you sure logout",
   "CONFIRM": "Yes",
   "VIEW_ALL": "View all",
-  "LATEST": "8 latest words",
+  "LATEST": "Latest words",
   "SEARCH_RESULTS": "Search results",
   "MODAL.CONFIRM_VIEW_ALL": "Do you want to view all?",
   "MODAL.CONFIRM_VIEW_ALL.CONTENT": "View all could take 4 - 5 seconds.",
