--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,14 +32,16 @@
   "CONFIRM_VIEW_ALL": "View all",
   "CANCEL": "Cancel",
   "SHOULD_STAY": "Keep this form open",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
-  "NOTIFICATION.UPDATE_SUCCESSFULLY": "Update successfully",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
-  "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
-  "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
-  "NOTIFICATION.COPIED": "Copy successfully",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully!",
+  "NOTIFICATION.UPDATE_SUCCESSFULLY": "Update successfully!",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully!",
+  "NOTIFICATION.UPDATE_DECLINE": "You don't have permission to edit",
+  "NOTIFICATION.DELETE_DECLINE": "You don't have permission to delete",
+  "NOTIFICATION.COPIED": "Copy successfully!",
   "NO_RESULT": "No result",
   "AFTER_NO_RESULT": "You could search another word.",
+  "EMPTY": "Empty",
+  "AFTER_EMPTY": "You could create new word.",
   "DICTIONARY.DISPLAY": "Word",
   "DICTIONARY.PINYIN": "Pinyin",
   "DICTIONARY.CHINA_VIETNAM_WORD": "CN-VI word",
