--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -32,14 +32,16 @@
   "CONFIRM_VIEW_ALL": "Vẫn xem tất cả",
   "CANCEL": "Huỷ",
   "SHOULD_STAY": "Tiếp tục {{ action }}",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
-  "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công!",
+  "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công!",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công!",
   "NOTIFICATION.UPDATE_DECLINE": "Bạn không có quyền để chỉnh sửa!",
   "NOTIFICATION.DELETE_DECLINE": "Bạn không có quyền để xoá!",
-  "NOTIFICATION.COPIED": "Đã sao chép đường dẫn thành công",
+  "NOTIFICATION.COPIED": "Đã sao chép đường dẫn thành công!",
   "NO_RESULT": "Không có dữ liệu",
+  "EMPTY": "Không có dữ liệu",
   "AFTER_NO_RESULT": "Bạn có thể tìm kiếm với từ khoá khác.",
+  "AFTER_EMPTY": "Bạn có thể tạo từ mới.",
   "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
   "DICTIONARY.CHINA_VIETNAM_WORD": "Hán Việt",
