--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -32,14 +32,16 @@
   "CONFIRM_VIEW_ALL": "View all",
   "CANCEL": "取消",
   "SHOULD_STAY": "Keep this form open",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
-  "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
-  "NOTIFICATION.UPDATE_DECLINE": "You dont have permission to edit",
-  "NOTIFICATION.DELETE_DECLINE": "You dont have permission to delete",
-  "NOTIFICATION.COPIED": "Copy 成功",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功！",
+  "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功！",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功！",
+  "NOTIFICATION.UPDATE_DECLINE": "You don't have permission to edit！",
+  "NOTIFICATION.DELETE_DECLINE": "You don't have permission to delete！",
+  "NOTIFICATION.COPIED": "Copy 成功!",
   "NO_RESULT": "没有数据",
   "AFTER_NO_RESULT": "You could search another word.",
+  "EMPTY": "Empty",
+  "AFTER_EMPTY": "你能创建新生次。",
   "DICTIONARY.DISPLAY": "汉字",
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.CHINA_VIETNAM_WORD": "汉越字",
