--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,9 +11,12 @@
   "STAR": "salient features",
   "TOTALS": "Totals: {{ totals }} words",
   "ACTION.CREATE": "Create",
+  "IS_CREATED_BY": " is created by ",
   "ACTION.DELETE": "Delete",
+  "IS_DELETED_BY": " is deleted by ",
   "ACTION.DISCARD": "Discard",
   "ACTION.UPDATE": "Edit",
+  "IS_UPDATED_BY": " is updated by ",
   "ACTION.LOOK_UP.CHI_VIE": "Chinese -> Vietnamese",
   "ACTION.LOOK_UP.VIE_CHI": "Vietnamese -> Chinese",
   "ACTION.SEARCH": "Look up",
