--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -11,9 +11,12 @@
   "STAR": "tính năng nổi bật",
   "TOTALS": "Hiện có {{ totals }} từ",
   "ACTION.CREATE": "Tạo mới",
+  "IS_CREATED_BY": " được tạo bởi ",
   "ACTION.DELETE": "Xoá",
+  "IS_DELETED_BY": " được xoá bởi ",
   "ACTION.DISCARD": "Huỷ",
   "ACTION.UPDATE": "Cập nhật",
+  "IS_UPDATED_BY": " được sửa bởi ",
   "ACTION.LOOK_UP.CHI_VIE": "Hán tự -> Việt",
   "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán tự",
   "ACTION.SEARCH": "Tra từ",
