--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -11,9 +11,12 @@
   "STAR": "显著特征",
   "TOTALS": "全部: {{ totals }} 词汇",
   "ACTION.CREATE": "创建",
+  "IS_CREATED_BY": " is created by ",
   "ACTION.DELETE": "删除",
+  "IS_DELETED_BY": " is deleted by ",
   "ACTION.DISCARD": "Discard",
   "ACTION.UPDATE": "更新",
+  "IS_UPDATED_BY": " is updated by ",
   "ACTION.LOOK_UP.CHI_VIE": "汉字 -> 越语",
   "ACTION.LOOK_UP.VIE_CHI": "越语 -> 汉字",
   "ACTION.SEARCH": "Look up",
