--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,22 @@
   "DICTIONARY.PINYIN": "Pinyin",
   "DICTIONARY.CHINA_VIETNAM_WORD": "CN-VI word",
   "DICTIONARY.DEFINE": "Define",
+  "DICTIONARY.TYPE": "Từ loại",
+  "DICTIONARY.TYPE.NOUN": "Danh từ",
+  "DICTIONARY.TYPE.VERB": "Động từ",
+  "DICTIONARY.TYPE.ADJ": "Tính từ",
+  "DICTIONARY.TYPE.N": "Số từ",
+  "DICTIONARY.TYPE.M": "Lượng từ",
+  "DICTIONARY.TYPE.NM": "Số lượng từ",
+  "DICTIONARY.TYPE.PRON": "Đại từ",
+  "DICTIONARY.TYPE.SUB": "Phó từ",
+  "DICTIONARY.TYPE.PREP": "Giới từ",
+  "DICTIONARY.TYPE.CONJ": "Liên từ",
+  "DICTIONARY.TYPE.SUP": "Trợ từ",
+  "DICTIONARY.TYPE.IN": "Cảm thán từ",
+  "DICTIONARY.TYPE.SOU": "Tượng than từ",
+  "DICTIONARY.TYPE.F": "Tiền tố",
+  "DICTIONARY.TYPE.L": "Hậu tố",
   "PLAYGROUND": "This is a playground for Chinese language lovers. Let's build the best Chinese learning website of all time together!",
   "COURSE": "Course",
   "COURSE.NAME": "Name",
