--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -49,6 +49,22 @@
   "DICTIONARY.PINYIN": "Phiên âm",
   "DICTIONARY.CHINA_VIETNAM_WORD": "Hán Việt",
   "DICTIONARY.DEFINE": "Nghĩa",
+  "DICTIONARY.TYPE": "Từ loại",
+  "DICTIONARY.TYPE.NOUN": "Danh từ",
+  "DICTIONARY.TYPE.VERB": "Động từ",
+  "DICTIONARY.TYPE.ADJ": "Tính từ",
+  "DICTIONARY.TYPE.N": "Số từ",
+  "DICTIONARY.TYPE.M": "Lượng từ",
+  "DICTIONARY.TYPE.NM": "Số lượng từ",
+  "DICTIONARY.TYPE.PRON": "Đại từ",
+  "DICTIONARY.TYPE.SUB": "Phó từ",
+  "DICTIONARY.TYPE.PREP": "Giới từ",
+  "DICTIONARY.TYPE.CONJ": "Liên từ",
+  "DICTIONARY.TYPE.SUP": "Trợ từ",
+  "DICTIONARY.TYPE.IN": "Cảm thán từ",
+  "DICTIONARY.TYPE.SOU": "Tượng than từ",
+  "DICTIONARY.TYPE.F": "Tiền tố",
+  "DICTIONARY.TYPE.L": "Hậu tố",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "Khoá học",
   "COURSE.NAME": "Khoá",
