--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -49,6 +49,22 @@
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.CHINA_VIETNAM_WORD": "汉越字",
   "DICTIONARY.DEFINE": "意思",
+  "DICTIONARY.TYPE": "Từ loại",
+  "DICTIONARY.TYPE.NOUN": "Danh từ",
+  "DICTIONARY.TYPE.VERB": "Động từ",
+  "DICTIONARY.TYPE.ADJ": "Tính từ",
+  "DICTIONARY.TYPE.N": "Số từ",
+  "DICTIONARY.TYPE.M": "Lượng từ",
+  "DICTIONARY.TYPE.NM": "Số lượng từ",
+  "DICTIONARY.TYPE.PRON": "Đại từ",
+  "DICTIONARY.TYPE.SUB": "Phó từ",
+  "DICTIONARY.TYPE.PREP": "Giới từ",
+  "DICTIONARY.TYPE.CONJ": "Liên từ",
+  "DICTIONARY.TYPE.SUP": "Trợ từ",
+  "DICTIONARY.TYPE.IN": "Cảm thán từ",
+  "DICTIONARY.TYPE.SOU": "Tượng than từ",
+  "DICTIONARY.TYPE.F": "Tiền tố",
+  "DICTIONARY.TYPE.L": "Hậu tố",
   "PLAYGROUND": "这里是汉语爱好者的乐园。让我们一起打造有史以来最好的中文学习网站！",
   "COURSE": "课程",
   "COURSE.NAME": "名",
