--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,7 @@
   "DICTIONARY.PINYIN": "Pinyin",
   "DICTIONARY.CHINA_VIETNAM_WORD": "CN-VI word",
   "DICTIONARY.DEFINE": "Define",
+  "DICTIONARY.REFERENCE": "Note",
   "DICTIONARY.TYPE": "Từ loại",
   "DICTIONARY.TYPE.NOUN": "Danh từ",
   "DICTIONARY.TYPE.VERB": "Động từ",
