--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -49,6 +49,7 @@
   "DICTIONARY.PINYIN": "Phiên âm",
   "DICTIONARY.CHINA_VIETNAM_WORD": "Hán Việt",
   "DICTIONARY.DEFINE": "Nghĩa",
+  "DICTIONARY.REFERENCE": "Ghi chú",
   "DICTIONARY.TYPE": "Từ loại",
   "DICTIONARY.TYPE.NOUN": "Danh từ",
   "DICTIONARY.TYPE.VERB": "Động từ",
