--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -49,6 +49,7 @@
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.CHINA_VIETNAM_WORD": "汉越字",
   "DICTIONARY.DEFINE": "意思",
+  "DICTIONARY.REFERENCE": "Note",
   "DICTIONARY.TYPE": "Từ loại",
   "DICTIONARY.TYPE.NOUN": "Danh từ",
   "DICTIONARY.TYPE.VERB": "Động từ",
