--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,6 +86,7 @@
   "NEW": "New features",
   "SUPPORT": "Support",
   "SETTING": "Setting",
+  "HISTORY": "History action",
   "LOGOUT": "Logout",
   "COMING_SOON": "Coming soon...",
   "NOTI.RELOAD": "Cant load data this time. You maybe reload.",
