--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -86,6 +86,7 @@
   "SETTING": "Thiết lập",
   "NEW": "Tính năng mới",
   "SUPPORT": "Hỗ trợ",
+  "HISTORY": "Lịch sử thao tác",
   "LOGOUT": "Đăng xuất",
   "COMING_SOON": "Sắp có...",
   "NOTI.RELOAD": "Không thể load dữ liệu lúc này. Bạn có thể reload lại trang.",
