--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -86,6 +86,7 @@
   "NEW": "新的功能",
   "SUPPORT": "支持",
   "SETTING": "设置",
+  "HISTORY": "History action",
   "LOGOUT": "登出",
   "COMING_SOON": "快来了。。。",
   "NOTI.RELOAD": "Cant load data this time. You maybe reload.",
